SOU (incomplete), (6) ROA Opt. Actions pgs + Issue Fixes
Previous 3 Committed changes in CSS and jQuery need to be implemented in order for these files to work in the application.
-- Screenreader attributes added to Quill Editors
-- Update CSS for Standard Modals
-- Fixed typo in HTML: Color Claim / BW alert
-- Fixed ‘Submit selected files’ aria lable to ‘Submit selected file’
-- statement_of_use.html is incomplete, lacking functionality for 'delete Class', committing at ST request because not having it committed is a blocker.

--- a/amend_mark.html
+++ b/amend_mark.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>Trademark Stylized :: USPTO.gov :: webapp prototype</title>
+    <title>Amend Mark :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -135,75 +135,65 @@
   <div class="row content">
     <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
       <!--START Content Div-->
-      	<div class="row" id="detected">
+      	<div class="row" id="amendmark">
             <div class="col-xs-12">
                 <div class="row">
-                    <section class="col-xs-12 steps breadcrumb-steps" aria-label="progress tracker">
-                        <div class="row displaycell">
-                            <div class="col-xs-2 one done">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                        <span>1</span>
+                        <section class="col-xs-12 steps breadcrumb-steps" aria-label="progress tracker">
+                            <div class="row displaycell">
+                                <div class="col-xs-2 one active">
+                                    <div class="row">
+                                        <div class="col-xs-4 col-sm-6 col-md-5 col-lg-5 number">
+                                            <span>1</span>
+                                        </div>
+                                        <div class="col-xs-8 col-sm-6 col-md-7 col-lg-7">
+                                            <p class="first">Attorney</p>
+                                        </div>
                                     </div>
-                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                        <p class="first">Your details</p>
+                                </div>
+                                <div class="col-xs-2 two">
+                                    <div class="row">
+                                        <div class="col-xs-4 col-sm-6 col-md-5 col-lg-5 number">
+                                            <span>2</span>
+                                        </div>
+                                        <div class="col-xs-8 col-sm-6 col-md-7 col-lg-7">
+                                            <p>Owner</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-2 three">
+                                    <div class="row">
+                                        <div class="col-xs-4 col-sm-6 col-md-5 col-lg-5 number">
+                                            <span>3</span>
+                                        </div>
+                                        <div class="col-xs-8 col-sm-6 col-md-7 col-lg-7">
+                                            <p>Mark</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-2 four">
+                                    <div class="row">
+                                        <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                            <span>4</span>
+                                        </div>
+                                        <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                            <p>Good / Service</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-2 five">
+                                    <div class="row">
+                                        <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                            <span>5</span>
+                                        </div>
+                                        <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
+                                            <p>Add Info</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-2 two active">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                        <span>2</span>
-                                    </div>
-                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                        <p>Trade mark details</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-2 three">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                        <span>3</span>
-                                    </div>
-                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                        <p>Goods and services</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-2 four">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                        <span>4</span>
-                                    </div>
-                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                        <p>Basis</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-2 five">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                        <span>5</span>
-                                    </div>
-                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                        <p>Additional info</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-2 six">
-                                <div class="row">
-                                    <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                        <span>6</span>
-                                    </div>
-                                    <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                        <p>Confirm and pay</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-                <h1>Trademark Details &#8211; Stylized</h1>
+                        </section>
+                    </div>
+                <h1>Amend Mark</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
                 <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
@@ -246,8 +236,7 @@
                                    </div>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12">
-                                    <p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
-                                    <label for="ta2">Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</label> 
+                                    <label for="ta2">I need to amend the description of my mark to confirm to my specimen:</label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
                                             <div class="col-xs-12">
