--- a/ROA_S3.html
+++ b/ROA_S3.html
@@ -313,7 +313,7 @@
                                                                 <div class="row">
                                                                     <div class="col-xs-12">
                                                                         <div class="col-xs-12 form-group form-group-md">
-                                                                            <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                            <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                         </div>
                                                                     </div>
                                                                 </div>
