--- a/additional_information_ROA_optional.html
+++ b/additional_information_ROA_optional.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>Additional Information :: USPTO.gov :: webapp prototype</title>
+    <title>Amend Additional Information :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -134,48 +134,48 @@
       <div class="row content">
         <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
           <!--START Content Div-->
-            <div class="row" id="detected">
+            <div class="row amend" id="detected">
                 <div class="col-xs-12">
                     <div class="row">
                         <section class="col-xs-12 steps breadcrumb-steps" aria-label="progress tracker">
                             <div class="row displaycell">
-                                <div class="col-xs-2 one done">
+                                <div class="col-xs-2 one">
                                     <div class="row">
-                                        <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <div class="col-xs-4 col-sm-6 col-md-5 col-lg-5 number">
                                             <span>1</span>
                                         </div>
-                                        <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                            <p class="first">Your details</p>
+                                        <div class="col-xs-8 col-sm-6 col-md-7 col-lg-7">
+                                            <p class="first">Attorney</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2 two done">
+                                <div class="col-xs-2 two">
                                     <div class="row">
-                                        <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <div class="col-xs-4 col-sm-6 col-md-5 col-lg-5 number">
                                             <span>2</span>
                                         </div>
-                                        <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                            <p>Trade mark details</p>
+                                        <div class="col-xs-8 col-sm-6 col-md-7 col-lg-7">
+                                            <p>Owner</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2 three done">
+                                <div class="col-xs-2 three">
                                     <div class="row">
-                                        <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
+                                        <div class="col-xs-4 col-sm-6 col-md-5 col-lg-5 number">
                                             <span>3</span>
                                         </div>
-                                        <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                            <p>Goods and services</p>
+                                        <div class="col-xs-8 col-sm-6 col-md-7 col-lg-7">
+                                            <p>Mark</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-2 four done">
+                                <div class="col-xs-2 four">
                                     <div class="row">
                                         <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                             <span>4</span>
                                         </div>
                                         <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                            <p>Basis</p>
+                                            <p>Good / Service</p>
                                         </div>
                                     </div>
                                 </div>
@@ -185,17 +185,7 @@
                                             <span>5</span>
                                         </div>
                                         <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                            <p>Additional info</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-xs-2 six">
-                                    <div class="row">
-                                        <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
-                                            <span>6</span>
-                                        </div>
-                                        <div class="col-xs-9 col-sm-7 col-md-8 col-lg-8">
-                                            <p>Confirm and pay</p>
+                                            <p>Add Info</p>
                                         </div>
                                     </div>
                                 </div>
