--- a/filing_basis_ab.html
+++ b/filing_basis_ab.html
@@ -274,7 +274,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files" onclick="preventDefault();">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file" onclick="preventDefault();">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -329,7 +329,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -384,7 +384,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -438,7 +438,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -493,7 +493,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -548,7 +548,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -601,7 +601,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -656,7 +656,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -711,7 +711,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
