--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -267,7 +267,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -323,7 +323,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -437,7 +437,7 @@
                                                                         <div class="row">
                                                                             <div class="col-xs-12">
                                                                                 <div class="form-group form-group-md">
-                                                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div><!-- Drop Zone -->
@@ -501,7 +501,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -614,7 +614,7 @@
                                                                         <div class="row">
                                                                             <div class="col-xs-12">
                                                                                 <div class="form-group form-group-md">
-                                                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected file">Submit</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div><!-- Drop Zone -->
