--- a/petition_torevive_ROA_S2_(2month-1stclaim_final).html
+++ b/petition_torevive_ROA_S2_(2month-1stclaim_final).html
@@ -346,7 +346,7 @@ of your application?</p>
                                                         <h2 class="card-title weight600">Request for Reconsideration</h2>
                                                     </div>
                                                     <script type="application/javascript" src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-                                                    <div id="editor" tabindex="0"></div>
+                                                    <div id="editor" role="textbox" aria-describedby="respondeditor" contenteditable="true" aria-multiline="true" tabindex="0"></div>
                                                     <br clear="all">
                                                 </fieldset>
                                                 <fieldset aria-label="select signature method">
