--- a/petition_torevive_ROA_S4_(lessthan6month-1stclaim_final).html
+++ b/petition_torevive_ROA_S4_(lessthan6month-1stclaim_final).html
@@ -380,7 +380,7 @@
                                                     <h2 class="card-title weight600">Request for Reconsideration</h2>
                                                 </div>
                                                 <script type="application/javascript" src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-                                                <div id="editor" aria-describedby="respondeditor" tabindex="0"></div>
+                                                <div id="editor" role="textbox" contenteditable="true" aria-multiline="true" aria-describedby="respondeditor" tabindex="0"></div>
                                                 <br clear="all">
                                             </fieldset>
                                         </div>
