Random Minor Checkbox Dev Pattern Consistency
This commit doesn’t effect anything locally, but is a consistency formality on some random checkboxes that still have an older dev pattern.

--- a/ROA_S1-3_optional.html
+++ b/ROA_S1-3_optional.html
@@ -154,24 +154,24 @@
                             <div class="row">
                                 <div class="col-xs-12 form-group form-group-md">		
                                     <input class="form-check-input checkmark" type="checkbox" value="aorchange" tabindex="0" aria-labelledby="aor" id="aoredit">
-                                    <label class="form-check-label form-check" for="aoredit"><span class="radio notspecial" id="aor">Appoint, replace or withdraw attorney of record</span></label>
+                                    <label class="form-check-label form-check" for="aoredit" id="aor"><span class="radio notspecial">Appoint, replace or withdraw attorney of record</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="ownaddchange" tabindex="0" aria-labelledby="ownaddr" id="ownaddre">
-                                    <label class="form-check-label form-check" for="ownaddre"><span class="radio notspecial" id="ownaddr">Correct or change the owner&#8217;s name or entity information</span></label>
+                                    <label class="form-check-label form-check" for="ownaddre" id="ownaddr"><span class="radio notspecial">Correct or change the owner&#8217;s name or entity information</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="editmark" tabindex="0" aria-labelledby="changemark" id="minorchange">
-                                    <label class="form-check-label form-check" for="minorchange"><span class="radio notspecial" id="changemark">Make a minor change to the mark or submit a better quality image</span></label>
+                                    <label class="form-check-label form-check" for="minorchange" id="changemark"><span class="radio notspecial">Make a minor change to the mark or submit a better quality image</span></label>
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="modgs" tabindex="0" aria-labelledby="modgss" id="modify">
-                                    <label class="form-check-label form-check" for="modify"><span class="radio notspecial" id="modgss">Modify goods/services</span></label>		
+                                    <label class="form-check-label form-check" for="modify" id="modgss"><span class="radio notspecial">Modify goods/services</span></label>		
                                 </div>
                                 <div class="col-xs-12 form-group form-group-md">
                                     <input class="form-check-input checkmark" type="checkbox" value="makechange" tabindex="0" aria-labelledby="change" id="changefile">
-                                    <label class="form-check-label form-check" for="changefile">
-                                    	<span class="radio notspecial" id="change">
+                                    <label class="form-check-label form-check" for="changefile" id="change">
+                                    	<span class="radio notspecial">
                                             <ul>Add, change or withdraw any of the following:
                                                 <li>Miscellanous Statement</li>
                                                 <li>Type of Register</li>
