--- a/amend_mark_ROA_optional.html
+++ b/amend_mark_ROA_optional.html
@@ -484,7 +484,7 @@
                                                         </div>
                                                     </div>
                                                     <input class="form-check-input checkmark" type="checkbox" value="portrait" tabindex="0" id="portraitchecked" aria-labelledby="checkportrait">
-                                                    <label class="form-check-label form-check" for="portraitchecked" id="checkportrait"><span class="radio notspecial" id="collect">Portrait</span></label>
+                                                    <label class="form-check-label form-check" for="portraitchecked" id="checkportrait"><span class="radio notspecial">Portrait</span></label>
                                                     <div id="yescontainsportrait" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                         <div class="containsaportrait col-xs-12">
                                                             <div class="row addportrait">
@@ -517,7 +517,7 @@
                                                         </div>
                                                     </div>
                                                     <input class="form-check-input checkmark" type="checkbox" value="signature" tabindex="0" aria-labelledby="checksignature" id="signaturechecked">
-                                                    <label class="form-check-label form-check" for="signaturechecked" id="checksignature"><span class="radio notspecial" id="collectm">Signature</span></label>
+                                                    <label class="form-check-label form-check" for="signaturechecked" id="checksignature"><span class="radio notspecial">Signature</span></label>
                                                     <div id="yescontainssignature" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                         <div class="containsasignature col-xs-12">
                                                             <div class="row addsignature">
