--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -415,8 +415,8 @@
                                                             </div>
                                                             <div class="col-xs-12 col-sm-8 checkmargin">
                                                                 <p class="weight600">john.smith@gmail.com</p>
-                                                                <input class="form-check-input checkmark" type="checkbox" value="authorizedemail" tabindex="0" aria-labelledby="authem" id="authemail">
-                                                                <label class="form-check-label form-check" for="authemail" id="emauth"><span class="radio notspecial" id="authem">Authorized</span></label>
+                                                                <input class="form-check-input checkmark" type="checkbox" value="authorizedemail" tabindex="0" aria-labelledby="emauth" id="authemail">
+                                                                <label class="form-check-label form-check" for="authemail" id="emauth"><span class="radio notspecial">Authorized</span></label>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -474,31 +474,31 @@
                                                             <div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md">		
                                                                     <input class="form-check-input checkmark" type="checkbox" value="selectall" tabindex="0" aria-labelledby="selall" id="select">
-                                                                    <label class="form-check-label form-check" for="select"><span class="radio notspecial" id="selall">Select all</span></label>
+                                                                    <label class="form-check-label form-check" for="select" id="selall"><span class="radio notspecial">Select all</span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">		
                                                                     <input class="form-check-input checkmark" type="checkbox" value="court" tabindex="0" aria-labelledby="courtdecree" id="courtd">
-                                                                    <label class="form-check-label form-check" for="courtd"><span class="radio notspecial" id="courtdecree">The signatory believes that the applicant is the owner of the trademark/service mark sought to be registered;</span></label>
+                                                                    <label class="form-check-label form-check" for="courtd" id="courtdecree"><span class="radio notspecial">The signatory believes that the applicant is the owner of the trademark/service mark sought to be registered;</span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="ttab" tabindex="0" aria-labelledby="priorttab" id="ttabmade">
-                                                                    <label class="form-check-label form-check" for="ttabmade"><span class="radio notspecial" id="priorttab">The mark is in use in commerce on or in connection with the goods/services in the application;</span></label>
+                                                                    <label class="form-check-label form-check" for="ttabmade" id="priorttab"><span class="radio notspecial">The mark is in use in commerce on or in connection with the goods/services in the application;</span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="conflicting" tabindex="0" aria-labelledby="conflictingreg" id="conflict">
-                                                                    <label class="form-check-label form-check" for="conflict"><span class="radio notspecial" id="conflictingreg">The specimen(s) shows the mark as used on or in connection with the goods/services in the application; and</span></label>
+                                                                    <label class="form-check-label form-check" for="conflict" id="conflictingreg"><span class="radio notspecial">The specimen(s) shows the mark as used on or in connection with the goods/services in the application; and</span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="earlier" tabindex="0" aria-labelledby="early" id="earlieruse">
-                                                                    <label class="form-check-label form-check" for="earlieruse"><span class="radio notspecial" id="early">To the best of the signatory&#8217;s knowledge and belief, the facts recited in the application are accurate. To the best of the signatory&#8217;s knowledge and belief, no other persons, except, if applicable, concurrent users, have the right to use the mark in commerce, either in the identical form or in such near resemblance as to be likely, when used on or in connection with the goods/services of such other persons, to cause confusion or mistake, or to deceive.</span></label>		
+                                                                    <label class="form-check-label form-check" for="earlieruse" id="early"><span class="radio notspecial">To the best of the signatory&#8217;s knowledge and belief, the facts recited in the application are accurate. To the best of the signatory&#8217;s knowledge and belief, no other persons, except, if applicable, concurrent users, have the right to use the mark in commerce, either in the identical form or in such near resemblance as to be likely, when used on or in connection with the goods/services of such other persons, to cause confusion or mistake, or to deceive.</span></label>		
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="earlier4" tabindex="0" aria-labelledby="earlyu" id="earlierusey">
-                                                                    <label class="form-check-label form-check" for="earlierusey"><span class="radio notspecial" id="earlyu">To the best of the signatory&#8217;s knowledge, information, and belief, formed after an inquiry reasonable under the circumstances, the allegations and other factual contentions made above have evidentiary support.</span></label>		
+                                                                    <label class="form-check-label form-check" for="earlierusey" id="earlyu"><span class="radio notspecial">To the best of the signatory&#8217;s knowledge, information, and belief, formed after an inquiry reasonable under the circumstances, the allegations and other factual contentions made above have evidentiary support.</span></label>		
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="earlier5" tabindex="0" aria-labelledby="earlyx" id="earlierusex">
-                                                                    <label class="form-check-label form-check" for="earlierusex"><span class="radio notspecial" id="earlyx">The signatory being warned that willful false statements and the like are punishable by fine or imprisonment, or both, under 18 U.S.C. &#167; 1001, and that such willful false statements and the like may jeopardize the validity of the application or submission or any registration resulting therefrom, declares that all statements made of his/her own knowledge are true and all statements made on information and belief are believed to be true.</span></label>		
+                                                                    <label class="form-check-label form-check" for="earlierusex" id="earlyx"><span class="radio notspecial">The signatory being warned that willful false statements and the like are punishable by fine or imprisonment, or both, under 18 U.S.C. &#167; 1001, and that such willful false statements and the like may jeopardize the validity of the application or submission or any registration resulting therefrom, declares that all statements made of his/her own knowledge are true and all statements made on information and belief are believed to be true.</span></label>		
                                                                 </div>
                                                             </div><!--end checkbox row-->
                                                         </div>
