--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -514,11 +514,11 @@
                                                             <div class="col-xs-12 form-group form-group-md">
                                                                 <p class="weight600">Specify if you have a pending application, foreign registration, or both for this good/service.</p>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basistwo" onclick="return datelimit();">
-                                                                <label class="form-check-label form-check" for="pendingtwo_basistwo"><span class="radio notspecial" id="pendtwo">Pending foreign application</span></label>
+                                                                <label class="form-check-label form-check" for="pendingtwo_basistwo" id="pendtwo"><span class="radio notspecial">Pending foreign application</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="foreigntwo" tabindex="0" id="foreigntwo_basistwo" aria-labelledby="forregtwo">
-                                                                <label class="form-check-label form-check" for="foreigntwo_basistwo"><span class="radio notspecial" id="forregtwo">Foreign registration</span></label>
+                                                                <label class="form-check-label form-check" for="foreigntwo_basistwo" id="forregtwo"><span class="radio notspecial">Foreign registration</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="natwo" tabindex="0" aria-labelledby="notapptwo" id="natwo_basistwo">
-                                                                <label class="form-check-label form-check" for="natwo_basistwo"><span class="radio notspecial" id="notapptwo">Not applicable</span></label>
+                                                                <label class="form-check-label form-check" for="natwo_basistwo" id="notapptwo"><span class="radio notspecial">Not applicable</span></label>
                                                             </div>
                                                             <div class="col-xs-12">
                                                                 <div class="row holdsapending" aria-labelledby="foreignapplication">
