--- a/create_account.html
+++ b/create_account.html
@@ -277,7 +277,7 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <input class="form-check-input checkmark" type="checkbox" value="" tabindex="0" aria-labelledby="termsagree" id="agreement">
-                                        <label class="form-check-label form-check form-check-left" for="agreement"><span class="radio notspecial" id="termsagree">I understand and agree with USPTO&#8217;s <a href="https://www.uspto.gov/terms-use-uspto-websites" target="_blank">Terms of Use<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> and <a href="https://www.uspto.gov/privacy-policy" target="_blank">Privacy Policy<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></span></label>
+                                        <label class="form-check-label form-check form-check-left" for="agreement" id="termsagree"><span class="radio notspecial">I understand and agree with USPTO&#8217;s <a href="https://www.uspto.gov/terms-use-uspto-websites" target="_blank">Terms of Use<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> and <a href="https://www.uspto.gov/privacy-policy" target="_blank">Privacy Policy<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></span></label>
                                     </div>
                                 </div>
                             </fieldset>
