--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Select Mark</title>
+    <title>Select Mark :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -219,7 +219,7 @@
                                     <p id="typemark">What type of mark are you applying for? (Note: to file a certifiation mark, you must deselect all other mark types) <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these. Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers. Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services."></a></p>
                                <fieldset>
                                     <legend>Select the type of mark you are applying for</legend>
-                                    <div><!-- Button trigger modal -->
+                                    <div>
                                         <input class="form-check-input checkmark" type="checkbox" value="Trademark / Servicemark" tabindex="0" aria-labelledby="tradeserv2" id="tradeserv">
                                         <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
@@ -228,8 +228,8 @@
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
                                         <div class="Accordion form-group form-group-md">
-                                            <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certificationcheck" id="certcheck">
-                                            <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><a href="#" data-toggle="modal" data-target="#tradeservmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></a>
+                                            <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certcheck2" id="certcheck">
+                                            <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial">Certification</span></label><a href="#" data-toggle="modal" data-target="#tradeservmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></a>
                                             <!-- Modal -->
                                             <div class="modal fade" id="tradeservmodal" tabindex="0" role="dialog" aria-labelledby="certmodallabel">
                                               <div class="modal-dialog" role="document">
@@ -247,8 +247,8 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <input class="form-check-input checkmark" type="checkbox" value="Collective" tabindex="0" id="collectcheck" aria-labelledby="collect">
-                                            <label class="form-check-label form-check hasinfo" for="collectcheck" id="collectcheck2"><span class="radio notspecial" id="collect">Collective</span></label><a href="#" data-toggle="modal" data-target="#collectivemodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about collective marks"></span></a>
+                                            <input class="form-check-input checkmark" type="checkbox" value="Collective" tabindex="0" id="collectcheck" aria-labelledby="collectcheck2">
+                                            <label class="form-check-label form-check hasinfo" for="collectcheck" id="collectcheck2"><span class="radio notspecial">Collective</span></label><a href="#" data-toggle="modal" data-target="#collectivemodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about collective marks"></span></a>
                                             <!-- Modal -->
                                             <div class="modal fade" id="collectivemodal" tabindex="0" role="dialog" aria-labelledby="collectmodallabel">
                                               <div class="modal-dialog" role="document">
@@ -266,8 +266,8 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <input class="form-check-input checkmark" type="checkbox" value="Collective Membership" tabindex="0" aria-labelledby="collectm" id="collectmember">
-                                            <label class="form-check-label form-check hasinfo" for="collectmember" id="collectm2"><span class="radio notspecial" id="collectm">Collective Membership</span></label><a href="#" data-toggle="modal" data-target="#collectivemembmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about collective membership marks"></span></a>
+                                            <input class="form-check-input checkmark" type="checkbox" value="Collective Membership" tabindex="0" aria-labelledby="collectm2" id="collectmember">
+                                            <label class="form-check-label form-check hasinfo" for="collectmember" id="collectm2"><span class="radio notspecial">Collective Membership</span></label><a href="#" data-toggle="modal" data-target="#collectivemembmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about collective membership marks"></span></a>
                                             <!-- Modal -->
                                             <div class="modal fade" id="collectivemembmodal" tabindex="0" role="dialog" aria-labelledby="collectmemberlabel">
                                               <div class="modal-dialog" role="document">
