--- a/statement_of_use.html
+++ b/statement_of_use.html
@@ -317,15 +317,15 @@
                                             <div class="row">
                                                 <div class="col-xs-12 form-group form-group-md">		
                                                     <input class="form-check-input checkmark" type="checkbox" value="minorchange" tabindex="0" aria-labelledby="minor" id="nonmaterial">
-                                                    <label class="form-check-label form-check-left form-check" for="nonmaterial"><span class="radio notspecial" id="minor">Make minor/non-material changes to my mark to conform to my specimen</span></label>
+                                                    <label class="form-check-label form-check-left form-check" for="nonmaterial" id="minor"><span class="radio notspecial">Make minor/non-material changes to my mark to conform to my specimen</span></label>
                                                 </div>
                                                 <div class="col-xs-12 form-group form-group-md">
                                                     <input class="form-check-input checkmark" type="checkbox" value="information" tabindex="0" aria-labelledby="addinfo" id="info">
-                                                    <label class="form-check-label form-check-left form-check" for="info"><span class="radio notspecial" id="addinfo">Include additional information not previously requested or specified</span></label>
+                                                    <label class="form-check-label form-check-left form-check" for="info" id="addinfo"><span class="radio notspecial">Include additional information not previously requested or specified</span></label>
                                                 </div>
                                                 <div class="col-xs-12 form-group form-group-md">
                                                     <input class="form-check-input checkmark" type="checkbox" value="optionalinsurance" tabindex="0" aria-labelledby="optional" id="insurance">
-                                                    <label class="form-check-label form-check-left form-check" for="insurance"><span class="radio notspecial" id="optional">File an optional insurance extension</span></label>
+                                                    <label class="form-check-label form-check-left form-check" for="insurance" id="optional"><span class="radio notspecial">File an optional insurance extension</span></label>
                                                 </div>
                                             </div>
                                         </div>
