--- a/user_profile.html
+++ b/user_profile.html
@@ -711,7 +711,7 @@
                                     <!--//panel three-->
                                     <div class="col-xs-12">
                                         <input class="form-check-input checkmark" type="checkbox" value="" tabindex="0" aria-labelledby="termsagree" id="authenticate">
-                                        <label class="form-check-label form-check form-check-left" for="authenticate"><span class="radio notspecial">I want to use the two-step authentication method every time I sign in.</label>
+                                        <label class="form-check-label form-check form-check-left" for="authenticate" id="termsagree"><span class="radio notspecial">I want to use the two-step authentication method every time I sign in.</label>
                                     </div>
                                 </div>
                             </div>                        
